# Po-Tech

./: .gitignore  .replit  app.py  create_admin.py  forms.py  get_admin_credentials.py  main.py  models.py  package.json  pyproject.toml  replit.md  routes.py  server.js
attached_assets/: main_1752667521061.py
public/: about.html  admin.html  contact.html  index.html  login.html  python-features.html  script.js  styles.css
static/css/: style.css
static/js/: main.js
templates/: 404.html  500.html  about.html  base.html  contact.html  dashboard.html  index.html
templates/admin/: contacts.html  dashboard.html  users.html
templates/animations/: create.html  gallery.html
templates/auth/: login.html  register.html
templates/blog/: create.html  list.html  view.html
templates/study/: materials.html  view.html
utils/: animation.py  email.py  file_handler.py
