[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.1",
    "flask-cors>=6.0.1",
    "flask-jwt-extended>=4.7.1",
    "flask-mail>=0.10.0",
    "flask-sqlalchemy>=3.1.1",
    "matplotlib>=3.10.3",
    "moviepy>=2.2.1",
    "numpy>=2.3.1",
    "pdfplumber>=0.11.7",
    "pillow>=11.3.0",
    "werkzeug>=3.1.3",
]
